# comic_suite

./: .gitignore  Cargo.toml  LICENSE.md  README.md  app.rc  build.rs  example_comic.cbw  installer.iss
assets/cbw_generators/: Sister Takane's Confession of Sins.cbw  generate_ehentai_cbw.py  generate_nhentai_cbw.py
comic_archive/: Cargo.toml
comic_archive/src/: error.rs  folder_archive.rs  lib.rs  prelude.rs  rar_archive.rs  seven_zip_archive.rs  web_archive.rs  zip_archive.rs
comic_archive/src/model/: mod.rs
comic_reader/: Cargo.toml  app.rc  build.rs  installer.iss
comic_reader/src/: app.rs  archive_view.rs  config.rs  error.rs  macros.rs  main.rs  prelude.rs  utils.rs
comic_reader/src/archive/: mod.rs
comic_reader/src/archive/image_archive/: manifest.rs  mod.rs  rar_archive.rs  web_archive.rs  zip_archive.rs
comic_reader/src/cache/: image_cache.rs  mod.rs  texture_cache.rs
comic_reader/src/manifest/: editor.rs  mod.rs
comic_reader/src/model/manifest/: editor.rs  mod.rs
comic_reader/src/ui/: debug_menu.rs  display.rs  image.rs  layout.rs  log.rs  manifest_editor.rs  mod.rs  modules.rs  thumbnail_grid.rs
comic_thumb_provider/: Cargo.toml  comic_thumb_provider.reg  service_register.cpp
comic_thumb_provider/src/: lib.rs
comic_thumbgen/: Cargo.toml
comic_thumbgen/src/: cbw.rs  cbz.rs  main.rs
examples/: example_webcomic.cbz  web_comic_example.cbw
examples/example_dynamic/: archive.lua  example_dynamic.cbz  manifest.toml
src/: app.rs  config.rs  error.rs  image_cache.rs  main.rs  prelude.rs  texture_cache.rs  ui.rs  ui_log.rs
src.old/: archive.rs  config.rs  image_cache.rs
src/archive/: image_archive.rs  mod.rs
src/archive/image_archive/: folder_archive.rs  mod.rs  web_archive.rs  zip_archive.rs
src/cache/: image_cache.rs  mod.rs  texture_cache.rs
src/ui/: image.rs  layout.rs  log.rs  mod.rs
v/: lmao_works_01.rs  lmao_works_02.rs  lmao_works_03-coming-together.rs
