[package]
name = "cbz_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.23"
egui_extras = "0.27"
image = "0.24"
zip = "0.6"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
rfd = "0.9"
lru = "0.14.0"
log = "0.4"
env_logger = "0.11"
mime_guess = "2.0"

[build-dependencies]
winres = "0.1"
embed-resource = "2.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[[bin]]
name = "cbz_viewer"
path = "src/main.rs"

[features]
default = []
windows_gui = []
