[package]
name = "cbz_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
gif = "0.12"
image = "0.24"
lru = "0.12"
zip = "0.6"
eframe = "0.27"
rfd = "0.14"
egui_extras = "0.27"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
mime_guess = "2.0"

[build-dependencies]
winres = "0.1"
embed-resource = "2.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[[bin]]
name = "cbz_viewer"
path = "src/main.rs"

[features]
default = []
windows_gui = []
