[package]
name = "comic_archive"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.1"
zip = "0.6.6"
lru = "0.12.3"
toml = "0.8.12"
serde = { version = "1.0.203", features = [ "derive" ] }
thiserror = "1.0.61"
tempfile = "3.10.1"
log = "0.4.21"
which = "8.0.0"
reqwest = { version = "0.12.4", features = [ "blocking" ] }

[features]
rar = []