[package]
name = "comic_archive"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
zip = "0.6.6"
toml = "0.8.12"
serde = { version = "1.0.203", features = [ "derive" ] }
thiserror = "1.0.61"
tempfile = "3.10.1"
log = "0.4.21"
reqwest = { version = "0.12.4", features = [ "blocking" ] }

[features]
rar = []