[package]
name = "comic_reader"
version = "0.1.6-rc2"
edition = "2024"

[dependencies]
comic_archive = { path = "../comic_archive" }
log = "0.4.21"
env_logger = "0.11.3"
gif = "0.13.1"
image = "0.25.6"
lru = "0.12.3"
zip = "0.6.6"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = "0.31.1"
rfd = "0.14.1"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
mime_guess = "2.0.4"
thiserror = "1.0.61"
toml = "0.8.12"
serde = { version = "1.0.203", features = [ "derive" ] }
base64ct = "1.7.0"
tempfile = "3.10.1"
which = "8.0.0"

[build-dependencies]
winres = "0.1.12"
embed-resource = "2.4.1"
which = "6"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "comic_reader"
path = "src/main.rs"

[features]
default = []
windows_gui = []
rar = [ ]