[package]
name = "comic_thumbgen"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-service = "0.8"
notify = "5.1"
walkdir = "2.3"
image = { version = "0.25", features = ["jpeg", "png"] }
zip = "0.6"
anyhow = "1.0"
log = "0.4"
simplelog = "0.12"  # Optional, for easy logging
ctrlc = "3.4.7"
